Correction de divers bug finalisation de l'interface